# ci_reload_bot

./: .Jenkinsfile  CMakeLists.txt  README.md
data/: README.md  two_scale_rel_G0_1.mat  two_scale_rel_G0_10.mat  two_scale_rel_G0_3.mat  two_scale_rel_G0_6.mat  two_scale_rel_G0_7.mat  two_scale_rel_G0_8.mat  two_scale_rel_G0_9.mat  two_scale_rel_H0_1.mat  two_scale_rel_H0_10.mat  two_scale_rel_H0_4.mat  two_scale_rel_H0_5.mat  two_scale_rel_H0_9.mat
src/: forwardMWT.cpp  forwardMWT.hpp  forwardMWT_tests.cpp  initial_conditions.cpp  initial_conditions.hpp  initial_conditions_tests.cpp  main.cpp  operator_two_scale.cpp  operator_two_scale.hpp  operator_two_scale_tests.cpp  pde.hpp  pde_tests.cpp  quadrature.cpp  quadrature.hpp  quadrature_tests.cpp
testing/ci_scripts/: travis-build.sh
testing/scripts/: OperatorTwoScale.m  Vlasov4.m  dlegendre.m  generate_unittest_data.m  legendre.m  lgwt.m  writeToFile.m
testing/scripts/test_generator_input_data/OperatorTwoScale/: two_scale_rel_G0_2.mat  two_scale_rel_G0_4.mat  two_scale_rel_G0_5.mat  two_scale_rel_H0_2.mat  two_scale_rel_H0_3.mat  two_scale_rel_H0_6.mat  two_scale_rel_H0_7.mat  two_scale_rel_H0_8.mat
